tailwind/root.css
/**
 * This injects Tailwind's base styles and any base styles registered by
 * plugins.
 */
@tailwind base;

/**
 * This injects Tailwind's component classes and any component classes
 * registered by plugins.
 */
@tailwind components;

/**
 * This injects Tailwind's utility classes and any utility classes registered
 * by plugins.
 */
@tailwind utilities;

@font-face {
  font-family: 'Geist Mono';
  src: url(/fonts/GeistMono-1.3.0/variable-woff/GeistMonoVF.woff), format('woff');
}

@font-face {
  font-family: 'Geist';
  src: url(/fonts/Geist-1.3.0/variable-woff/GeistVF.woff), format('woff');
}

:root {
  @apply tw-text-[14px] sm:tw-text-[15px] md:tw-text-[16px];
}

